--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
 version: "3.5"
 
-# TODO: add volume creation on the host for syn-mongo
-# TODO: add volume to the syn-rabbitmq container
-# TODO: add volume for synergy-scheduler settings/flow/context files
+# :param SYN_ENVIRONMENT
+# SYN_ENVIRONMENT={dev|qa|prod}; docker-compose up
+
+# NOTICE: syn-mongodb volume requires /data/db folder to be created on the host
+# NOTICE: syn-rabbitmq volume requires /var/lib/rabbitmq folder to be created on the host
+# NOTICE: synergy-scheduler volume requires /etc/synergy-scheduler/ folder to be created on the host
+# NOTICE: synergy-workers volume requires /etc/synergy-workers/ folder to be created on the host
+# @see: https://www.digitalocean.com/community/tutorials/how-to-share-data-between-the-docker-container-and-the-host
 
 networks:
   syn-network:
@@ -19,6 +24,7 @@ services:
     networks:
       - syn-network
     volumes:
+      # /HOST:/CONTAINER
       - "/data/db:/data/db"
     restart: "unless-stopped"
 
@@ -32,6 +38,9 @@ services:
     environment:
       - RABBITMQ_DEFAULT_USER = guest
       - RABBITMQ_DEFAULT_PASS = guest
+    volumes:
+      # /HOST:/CONTAINER
+      - "/var/lib/rabbitmq:/var/lib/rabbitmq"
     networks:
       - syn-network
     restart: "unless-stopped"
@@ -63,6 +72,11 @@ services:
     ports:
       # HOST:CONTAINER
       - "0.0.0.0:5000:5000"
+    environment:
+      - SYN_ENVIRONMENT=${SYN_ENVIRONMENT}
+    volumes:
+      # /HOST:/CONTAINER
+      - "/etc/synergy-scheduler:/opt/synergy-distro/configurations"
     networks:
       - syn-network
     restart: "unless-stopped"
@@ -76,6 +90,11 @@ services:
     build:
       context: .
       dockerfile: scripts/worker.dockerfile
+    environment:
+      - SYN_ENVIRONMENT=${SYN_ENVIRONMENT}
+    volumes:
+      # /HOST:/CONTAINER
+      - "/etc/synergy-workers:/opt/synergy-distro/configurations"
     networks:
       - syn-network
     restart: "unless-stopped"
