Trying to fix Travis-ci builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
         apt:
           packages:
           - python3.7
+          - python3-venv
           - python3-setuptools
           - python3-dev
 
